# agentic-workshop

./: .gitignore  Makefile  README.md  plan.md  pyproject.toml
.github/: project-config.md
.github/agents/: architect.agent.md  athena.agent.md  civilian.agent.md  cto.agent.md  doctor.agent.md  explorer.agent.md  game-master.agent.md  implementor.agent.md  po.agent.md  qa-lead.agent.md  sdlc-orchestrator.agent.md  tech-writer.agent.md  werewolf.agent.md
.github/hooks/: audit_mcp_tool_call.py  validate_subagent_action.py  validate_subagent_action.py.json
.github/skills/deception/: SKILL.md
.github/skills/deduction/: SKILL.md
.github/skills/protection/: SKILL.md
.github/workflow_templates/: ADR.md  ATHENA_REPORT.md  PLAN.md  QA_REPORT.md  REQUIREMENTS.md
src/pokeproxy/: __init__.py  client.py  main.py  router.py
tests/: __init__.py  test_proxy.py
